debhelper (11.3.3) UNRELEASED; urgency=medium

  [ Niels Thykier ]
  * d/control: Remove versioned Breaks on qt5-qmake as it
    prevents others from backporting qt5 packages to
    stable-backports.  The Breaks was added to assist
    cross-building in buster and it has already served that
    purpose by now.

  [ Roberto C. Sánchez ]
  * cmake.pm: Reorder arguments to cmake to make "-D FOO=BAR"
    work.  This form only works if it is before the directory
    passed to cmake.

  [ Daniele Nicolodi ]
  * dh_installsystemd: Improve man page.
  * dh_installsystemd: Tighten error handling: fail immediately if an unit
    name not installed by the package is specified on the command line.
  * dh_installsystemd: Fix the undocumented '--no-also' command line
    option to do not affect handling of the Alias= directives.
  * dh_installsystemd: Add timer units to the list of units considered
    when the '--name' option is specified.

 -- Niels Thykier <niels@thykier.net>  Sun, 10 Jun 2018 07:35:21 +0000

debhelper (11.3.2) unstable; urgency=medium

  * dh_installchangelogs: Fix a second regression that made
    dh_installchangelogs ignore upstream changelogs in the
    source directories.  Thanks to gregor herrmann for
    reporting the imcomplete fix.  (Closes: #899248)

 -- Niels Thykier <niels@thykier.net>  Wed, 23 May 2018 05:59:59 +0000

debhelper (11.3.1) unstable; urgency=medium

  * dh_installchangelogs: Fix logic error that made
    dh_installchangelogs incorrectly ignore explicitly passed
    changelogs.  Thanks to Sven Joachim and Rene Engelhard
    for reporting the bug.  (Closes: #899248)

 -- Niels Thykier <niels@thykier.net>  Mon, 21 May 2018 20:02:32 +0000

debhelper (11.3) unstable; urgency=medium

  [ Niels Thykier ]
  * Buildsystem.pm: Fix use of undefined variable in certain
    error conditions.
  * dh_makeshlibs: Support -VUpstream-Version and -VNone as
    alternative to passing -V or omitting -V respectively.