@@ -6,6 +6,10 @@ debhelper (11.3.3) UNRELEASED; urgency=medium
     stable-backports.  The Breaks was added to assist
     cross-building in buster and it has already served that
     purpose by now.
+  * Dh_Lib.pm: Provide a more helpful diagnostic message when
+    an executable config file fails and it does not have a
+    #!-line (and is not an ELF binary).  Thanks to Nadav
+    Ruskin for the suggestion.  (Closes: #902214)
 
   [ Roberto C. Sánchez ]
   * cmake.pm: Reorder arguments to cmake to make "-D FOO=BAR"
